style.css
body {
  background-color: #36384C;
  font-family: 'Playfair Display', serif;
  z-index: 1;
}

#titlebar {
  height: 2rem;
  text-align: center;
  display: flex;
  justify-content: space-between;
  padding-bottom: 20px;
}

#timer_div {
  color: #E9DCCD;
}

#startButton {
  background-color: #E3BAB3;
  color: #36384C;
  font-size: 1.5rem;
  align-items: center;
  width: 100px;
  height: 60px;
  transform: translateY(50px);
  border-radius: 5px;
}

#startButton:hover {
  background-color: white;
  border-radius: 5px;
}

#startButton:active {
  background-color: lightblue;
  border-radius: 5px;
}

h1 {
  color: rgba(180, 179, 188, 0.8);
  font-size: 1.3rem;
  margin: 0px;
  width: 50%
}

#clickCounter {
  color: #E9DCCD;
  width: 20%;
  font-size: 0.9rem;
  text-align: right;
  display: flex;
  justify-content: center;
}

#counter {
  width: 20%;
  font-size: 0.9rem;
  display: flex;
  justify-content: space-evenly;
}

h3 {
  font-family: 'Raleway', sans-serif;
  color: #E3BAB3;
}

.material-icons.md-18 {
  float: left;
  color: #E9DCCD;
  font-size: 1rem;
}

#startScreen {
  display: flex;
  justify-content: center;
  height: 0px;
}

#gameScreen {
  display: none;
  justify-content: center;
  width: 100vw;
}

div#memory_board {
  width: 100vw;
  height: 90vh;
  position: absolute;
  top: 10vh;
  left: 0px;
  margin: auto;
  display: flex;
  flex-wrap: wrap;
}

div#memory_board>div {
  background: url(images/back_of_card_small.jpg);
  border: #000 1px solid;
  width: 20vw;
  height: 30vw;
  float: left;
  margin: 0px auto;
  cursor: pointer;
}

img {
  width: 20vw;
  height: 30vw;
}

@media screen and (min-width: 768px) {

  div#memory_board {
    top: 5vh;
    width: 90vw;
    position: inherit;
  }

  div#memory_board>div {
    margin: 5px auto;
    width: 18vw;
    height: 27vw;
  }

  img {
    width: 18vw;
    height: 27vw;
  }

  h1 {
    font-size: 1.8rem;
  }

  #clickCounter {
    font-size: 1.5rem;
  }

  #counter {
    font-size: 1.5rem;
  }

  .material-icons.md-18 {
    font-size: 30px;
  }

}

@media screen and (min-width: 1024px) {

  div#memory_board {
    width: 75vw;
  }

  div#memory_board>div {
    width: 16vw;
    height: 24vw;
  }

  img {
    width: 16vw;
    height: 24vw;
  }

}

